# podofo.js

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
cmake/: Misc.cmake  npm.cmake
npm/: .gitignore  CMakeLists.txt  README.md  package.json  podofo.d.ts
src/: CMakeLists.txt  bind.cpp
src/fonts/: notomono-regular.ttf.cpp
tests/: .gitignore  CMakeLists.txt  jest.config.js  package-lock.json  package.json  setup.js
tests/test_data/: certificate.der  private_key.der
tests/unit_tests/: font.test.js  image.test.js  meta.test.js  pages.test.js  painter.test.js  sign.test.js  text.test.js  utils.js
